# codex-sandbox

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  publish-adapter.yml  release-binaries.yml
docs/: architecture.md  other-languages.md
examples/minimal-ts/: README.md  package.json
examples/minimal-ts/src/: main.ts
native/: README.md
native/sandbox-host/: Cargo.toml
native/sandbox-host/src/: main.rs
scripts/: build-native.mjs  package-release-assets.mjs  release-version.mjs  stage-adapter-native-assets.mjs  sync-native-assets.mjs
tests/: adapter.test.ts  cli.test.ts
tests/fixtures/: fake-codex-shell-host.mjs
